fix for avoiding the npe